Solve day 11